fix names and share on small screen

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -40,13 +40,18 @@ body , html
 
 #share
 	position absolute
-	width 300px
+	width 180px
 	overflow visible
 	top 0
 	right 10px
 	z-index 999
 	text-align right
 	padding 10px
+
+@media screen and (max-width: 1050px) 
+	#share
+		top auto
+		bottom 0
 
 #global
 	position absolute
